2006-11-22  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js: Remove dead code.

	* static/images/opml-icon-16x16.png: Icon for OPML link.

2006-11-12  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js: Include date information in the
	queue and feed viewer.

	* static/css/site.css: Add styles for the date fields in the queue
	and feed contents viewer.

	* templates/base.html: Disable flash storage for dojo.

	* views.py: New module with views that are not strictly part of
	any app on the site.

	* urls.py (urlpatterns): Use site-wide views module for contacts
	page and the home page.

	* static/css/site.css: Update the formatting of the "login or
	register" invitation section of the home page.

2006-11-11  Doug Hellmann  <dhellmann@racemi.com>

	* templates/base.html: Need the dojo.string and
	dojo.widget.Tooltip packages.

	* static/js/oneoffcast/user.js (insert_entry_into_queue): Show the
	partial summary in the queue and the full summary in a tooltip
	associated with the title link.
	
	* static/js/oneoffcast/user.js (user_onload): The template now
	includes the initial subscription list and queue contents in js
	variables, so iterate over those onload instead of calling back to
	the server again.

	* static/js/oneoffcast/user.js (user_onload): Set the initial
	focus to the URL field.

	* templates/base.html: Add dojo.widget package configuration to
	the javascript.

2006-11-05  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js: Add set_queue_empty to have a
	consistent way to reflect the empty queue.  Check the queue length
	when we remove an item so we can update the display if there is
	nothing in the queue.

	* urls.py (urlpatterns): Add a url handler for /contact/ to go to
	the contact page view.

	* templates/base.html: Add a link to the contact page.

	* static/css/site.css (contactpage): Add styles for the contact page.

	* templates/base.html: If the user is staff, include a link to the