@@ -1,3 +1,8 @@
+2006-12-17  Doug Hellmann  <dhellmann@racemi.com>
+
+	* static/js/oneoffcast/user.js (do_add_to_queue): If we do not
+	find an author name, send an empty string instead of "undefined".
+
 2006-11-22  Doug Hellmann  <dhellmann@racemi.com>
 
 	* static/js/oneoffcast/user.js: Remove dead code.
